# Blink

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  considerations.md  docker-compose.yml
.github/workflows/: frontend-ci.yml
backend/: pyproject.toml
backend/alembic/: README.md
backend/api/: main.py  pyproject.toml
backend/api/routers/: health.py
backend/blink_shared/: __init__.py  config.py  database.py  pyproject.toml
backend/functions/: README.md
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/public/: wordlist.json
frontend/scripts/: build-wordlist.mjs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/tts/: route.ts
frontend/src/app/api/tts/voices/: route.ts
frontend/src/components/: BlinkStatus.tsx  CameraView.tsx  Card.tsx  CommandBar.tsx  GestureLegend.tsx  KeyButton.tsx  MeterBar.tsx  PreloadResources.tsx  ScanGrid.tsx  ScanSpeedControl.tsx  StatusDot.tsx  SuggestionStrip.tsx  Transcript.tsx
frontend/src/lib/blink/: detectors.ts  landmarker.ts  useBlink.ts  useBlinkMetric.ts
frontend/src/lib/predict/: bigrams.ts  predictor.ts  predictor.worker.ts  usePredictor.ts
frontend/src/lib/scanner/: layouts.ts  machine.ts  useScanner.ts
frontend/src/lib/voice/: staticAudio.ts  useVoiceCues.ts
